# mde_artifact

./: .gitignore  Dockerfile  README.md  release_artifact.sh  tool.py
thirdparty_sources/: .gitignore  README.md
thirdparty_sources/bzip2/: build.sh
thirdparty_sources/nano/: build.sh
workdir/SLIM/: CMakeLists.txt  IR.cpp  Instructions.cpp  Operand.cpp  README.md  SLIMDebug.cpp  main.cpp
workdir/SLIM/Passes/: GlobalInit.cpp  MergeExit.cpp
workdir/SLIM/include/: IR-merged.h  IR.h  Instructions-merged.h  Instructions.h  Operand.h  Operand_4Aug24.h  SLIMDebug.h
workdir/VASCO-LFCPA_stats/: run_bulk.sh
workdir/VASCO-LFCPA_stats/VASCO-LFCPA/: .gitignore  CMakeLists.txt  Common.cpp  CommonAll.cpp  FISP_Def.cpp  FSFP_Def.cpp  FSSP_Kill.cpp  HandleArgs.py  lfcpa.cpp  run.sh
workdir/VASCO-LFCPA_stats/VASCO-LFCPA/include/: Analysis.h  AnalysisDef.h  AnalysisGenKill.h  Common.h  CommonAll.h  CommonNaive.h  FISP_Def.h  FSFP_Def.h  TransitionGraph.cpp  Worklist.h  lfcpa.h  sample.hpp
workdir/VASCO-LFCPA_stats/past_outputs/old1/: output_bzip2_funptr.txt  output_hmmer_funptr.txt  output_lbm_funptr.txt  output_libquantum_funptr.txt  output_mcf_funptr.txt  output_sjeng_withstoreins_funptr.txt
workdir/VASCO-LFCPA_stats/past_outputs/old2/: output_bzip2_funptr.txt  output_hmmer_funptr.txt  output_lbm_funptr.txt  output_libquantum_funptr.txt  output_mcf_funptr.txt  output_sjeng_withstoreins_funptr.txt
workdir/VASCO-LFCPA_stats/past_outputs/old3/: output_bzip2_funptr.txt  output_hmmer_funptr.txt  output_lbm_funptr.txt  output_libquantum_funptr.txt  output_mcf_funptr.txt  output_sjeng_withstoreins_funptr.txt
workdir/VASCO-LFCPA_stats/past_outputs/old4/: output_bzip2_funptr.txt  output_hmmer_funptr.txt  output_lbm_funptr.txt  output_libquantum_funptr.txt  output_mcf_funptr.txt  output_sjeng_withstoreins_funptr.txt
workdir/VASCO-LFCPA_stats/past_outputs/old5/: output_bzip2_funptr.txt  output_hmmer_funptr.txt  output_lbm_funptr.txt  output_libquantum_funptr.txt  output_mcf_funptr.txt  output_sjeng_withstoreins_funptr.txt
workdir/VASCO-LFCPA_stats/past_outputs/old6/: output_bzip2_funptr.txt  output_hmmer_funptr.txt  output_lbm_funptr.txt  output_libquantum_funptr.txt  output_mcf_funptr.txt  output_sjeng_withstoreins_funptr.txt
workdir/VASCO-LFCPA_stats/past_outputs/old7/: output_bzip2_funptr.txt  output_hmmer_funptr.txt  output_lbm_funptr.txt  output_libquantum_funptr.txt  output_mcf_funptr.txt  output_sjeng_withstoreins_funptr.txt
workdir/VASCO-LFCPA_time_pmu/: run_bulk.sh  run_new.sh
workdir/VASCO-LFCPA_time_pmu/VASCO-LFCPA/: .clang-format  .gitignore  CMakeLists.txt  Common.cpp  CommonAll.cpp  CommonSingleLevel.cpp  FISP_Def.cpp  FISP_Gen.cpp  HandleArgs.py  Profiling.cpp  ZDDWrapper.cpp  lfcpa.cpp  run.sh
workdir/VASCO-LFCPA_time_pmu/VASCO-LFCPA/include/: Analysis.h  Common.h  CommonAll.h  CommonSingleLevel.h  CommonSparseBV.h  CommonZDD.h  Context.h  FISP_Def.h  FISP_Gen.h  FSSP_Kill.h  Profiling.hpp  SparseBVWrapper.h  TransitionGraph.h  ZDDWrapper.h  lfcpa.h
workdir/VASCO-LFCPA_time_pmu/past_outputs/old1/: output_bzip2_funptr_lhf.txt  output_bzip2_funptr_naive.txt  output_bzip2_funptr_singlelevel.txt  output_bzip2_funptr_sparsebv.txt  output_bzip2_funptr_zdd.txt  output_hmmer_funptr_mde.txt  output_hmmer_funptr_naive.txt  output_hmmer_funptr_singlelevel.txt  output_hmmer_funptr_sparsebv.txt  output_hmmer_funptr_zdd.txt  output_lbm_funptr_lhf.txt  output_lbm_funptr_naive.txt  output_lbm_funptr_singlelevel.txt  output_lbm_funptr_sparsebv.txt  output_lbm_funptr_zdd.txt  output_libquantum_funptr_lhf.txt  output_libquantum_funptr_naive.txt  output_libquantum_funptr_singlelevel.txt  output_libquantum_funptr_sparsebv.txt  output_libquantum_funptr_zdd.txt  output_mcf_funptr_lhf.txt  output_mcf_funptr_naive.txt  output_mcf_funptr_singlelevel.txt  output_mcf_funptr_sparsebv.txt  output_mcf_funptr_zdd.txt  output_sjeng_withstoreins_funptr_mde.txt  output_sjeng_withstoreins_funptr_naive.txt  output_sjeng_withstoreins_funptr_singlelevel.txt  output_sjeng_withstoreins_funptr_sparsebv.txt  output_sjeng_withstoreins_funptr_zdd.txt
workdir/VASCO-LFCPA_time_pmu/past_outputs/old2/: output_bzip2_funptr_lhf.txt  output_bzip2_funptr_naive.txt  output_bzip2_funptr_singlelevel.txt  output_bzip2_funptr_sparsebv.txt  output_bzip2_funptr_zdd.txt  output_hmmer_funptr_mde.txt  output_hmmer_funptr_naive.txt  output_hmmer_funptr_singlelevel.txt  output_hmmer_funptr_sparsebv.txt  output_hmmer_funptr_zdd.txt  output_lbm_funptr_lhf.txt  output_lbm_funptr_naive.txt  output_lbm_funptr_singlelevel.txt  output_lbm_funptr_sparsebv.txt  output_lbm_funptr_zdd.txt  output_libquantum_funptr_lhf.txt  output_libquantum_funptr_naive.txt  output_libquantum_funptr_singlelevel.txt  output_libquantum_funptr_sparsebv.txt  output_libquantum_funptr_zdd.txt  output_mcf_funptr_lhf.txt  output_mcf_funptr_naive.txt  output_mcf_funptr_sparsebv.txt  (+7 more)
workdir/mde/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  changelog.md  doxygen.cfg  gendoc.sh  mdeConfig.cmake.in  test_build_combinations.sh
workdir/mde/doc/: cpp_features_list.md  doxygen_frontpage.md  guide.md  proposed_features.md
workdir/mde/src/builder_tool/: builder.py  schema.json
workdir/mde/src/builder_tool/examples/: test_int.json  test_int2.json
workdir/mde/src/builder_tool/templates/: macros_static.jinja2.txt  mde_definition.jinja2.cpp  mde_definition_static.jinja2.cpp  verify_types.jinja2.cpp
workdir/mde/src/examples/: basic.cpp  benchmark.cpp  benchmark_generator.py  benchmark_persistent.cpp  general_nesting.cpp  general_nesting_2elem.cpp
workdir/mde/src/include/mde/: mde.hpp  mde_common.hpp  mde_serialization.hpp  profiling.hpp
workdir/mde/src/tests/: basic.cpp  common.hpp  dedup.cpp  eviction.cpp  init.cpp  mdeconfig.cpp  nesting.cpp  parallel.cpp  serialization.cpp
workdir/sources/: README.md
workdir/sources/flatten_constexpr_pass/: CMakeLists.txt
workdir/sources/flatten_constexpr_pass/src/: FlattenConstExprPass.cpp
workdir/spec2006_build_scripts/: README.md  bzip2.sh  hmmer.sh  lbm.sh  libquantum.sh  mcf.sh  sjeng.sh
(+20 files in other folders)
